--- a/lifestage_carryover/scripts/growth_AH.Rmd
+++ b/lifestage_carryover/scripts/growth_AH.Rmd
@@ -50,8 +50,15 @@ plot<-growth%>%
   ggplot(aes(color=treatment, x=month, y=length))+
   geom_boxplot()+
   facet_grid(~lifestage)+
-  scale_color_manual(values=c("darkgray", "darkred"))+
-  theme_classic();plot
+  ylab("Mean Length (cm)")+
+  xlab("Month")+
+  scale_color_manual(values=c("darkgray", "darkred"), name="Treatment", labels=c("Control", "Treatment"))+
+  theme_classic()+
+  theme(
+    text=element_text(size=12, color="black")
+  );plot
+
+ggsave(plot=plot, "lifestage_carryover/output/size/mean_lengths_box.png", width=7, height=4)
 ```
 
 Plot as mean +- standard error. 
