--- a/code/01-size.Rmd
+++ b/code/01-size.Rmd
@@ -23,6 +23,11 @@ adult <- length %>%
 ```
 
 
+```{r}
+juv <- length %>%
+  filter(life.stage == "juvenile")
+```
+
 
 ```{r}
 # Reshape the data to long format
@@ -55,6 +60,22 @@ ggplot(adult, aes(x = init.treat, y = length, fill = tag)) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1)) # Rotate x labels if needed
 
 ```
+
+
+```{r}
+ggplot(juv, aes(x = init.treat, y = length, fill = tag)) +
+  geom_boxplot(trim = FALSE) + # Trim is set to FALSE to show the full range of the data
+  facet_wrap(~ month) + # Separate violins by month with the same y-axis scale
+  labs(title = "Violin Plot of Length by Treatment and Tag", x = "Treatment", y = "Length") +
+  theme_minimal() +
+  theme(legend.position = "right") +
+  scale_fill_discrete(name = "Tag") +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) # Rotate x labels if needed
+
+```
+
+
+
 
 ```{r}
 # Assuming 'adult' is your dataframe with the appropriate columns
